app/assets/stylesheets/layouts/management/l-widget-creation.scss
.l-widget-creation {
  // We make sure the fixed c-action-bar doesn't cover the content if the
  // screen has a small height
  padding-bottom: 75px;

  &.-title {
    display: flex;
    align-items: center;
    min-height: calc(100vh - 300px);
    padding-top: 50px;

    > .wrapper {
      display: flex;
      flex-direction: column;
      align-items: center;
    }
  }

  &.-filters {
    margin-top: 50px;
  }

  &.-dataset {
    .context {
      margin: 50px 0 10px;
      font-size: $font-size-big;
      font-weight: $font-weight-light;
      letter-spacing: .2px;
      line-height: 1.14;
    }
  }

  &.-visualization {
    padding-top: 50px;

    > .wrapper {
      display: flex;
      flex-direction: column;
      align-items: center;

      .graph {
        width: 400px;
      }
    }
  }
}

